@@ -1,6 +1,6 @@
 {
   "name":    "simp-fips",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "author":  "SIMP Team",
   "summary": "A SIMP module for managing FIPS",
   "license": "Apache-2.0",
@@ -14,7 +14,7 @@
   "dependencies": [
     {
       "name": "simp/simplib",
-      "version_requirement": ">= 3.1.0 < 4.0.0"
+      "version_requirement": ">= 3.3.0 < 4.0.0"
     },
     {
       "name": "puppetlabs/stdlib",
